--- a/chicken.html
+++ b/chicken.html
@@ -12,7 +12,7 @@
         <header>
             <a href="#" class="logo">SuperTasty</a>
             <ul>
-                <li><a href="pork.html" >Pork</a></li>
+                <li><a href="index.html" >Pork</a></li>
                 <li><a href="chicken.html" class="active">Chicken</a></li>
                 <li><a href="beef.html">Beef</a></li>
                 <li><a href="seafood.html">Seafood</a></li>
